--- a/site/styles/custom_tweaks.less
+++ b/site/styles/custom_tweaks.less
@@ -47,3 +47,6 @@
 
 // tweak: { "type" : "color" , "title" : "Color of social buttons" , "category" : "Tweaks added by LEVL3design" }
 @socialButtonColor: #c5b358;
+
+// tweak: { "type" : "value" , "title" : "Folder Nav Title Font Mobile" , "min" : "0" , "max" : "40" , "category" : "Tweaks added by LEVL3design" }
+@folderNavTitleFontMobile: 23px;
